added 1 and 2 blocks

--- a/Index.html
+++ b/Index.html
@@ -3,9 +3,71 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Homework1</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="Style.css">
+    <style type="scss">
+      </style>
 </head>
 <body>
+    <main class="center">
+    <header class="heading">
+    <h1 class="header">Добро пожаловать<br> на мой сайт мини-игр</h1>
+    <p class="header__text">Тебе предстоит пройти несколько увлекательных игр.<br> Если готов, нажимай <span class="header__text_bold">«Поехали!»</span> и <span class="header__text_bold">приступай.</span></p>
+    <button class="header__button">Поехали!</button>
+    <nav class="navbar">
+        <h3 class="navbar__item">викторина</h3>
+        <h3 class="navbar__item">угадай число</h3>
+        <h3 class="navbar__item">переверни текст</h3>
+        <h3 class="navbar__item_gap">простая а</h3>
+    </nav>
+    </header>
+    <div class="about">
+        <h1 class="about__header">Об играх</h1>
+        <p class="about__text">В моей коллекции представлено 6 игр на разные темы.<br> Игры несложные — в них может поиграть каждый.<br> Все игры доступны для пользования.</p>
     
+    <div class="games">
+    <a href="#"><article class="articles">
+        <img class="games__img" src="./imgs/Game1.svg" alt="guess number">
+        <p class="articles__number">Игра №1</p>
+        <h2 class="articles__name">Угадай число</h2>
+    </article>
+    </a>
+    <a href="#"><article class="articles articles__height_second">
+        <img class="games__img" src="./imgs/Game2.svg" alt="easy maths">
+        <p class="articles__number">Игра №2</p>
+        <h2 class="articles__name">Простая<br> арифметика</h2>
+    </article>
+    </a>
+        <a href="#"><article class="articles articles__height_third">
+        <img class="games__img" src="./imgs/Game3.svg" alt="upend text">
+        <p class="articles__number">Игра №3</p>
+        <h2 class="articles__name">Переверни текст</h2>
+    </article>
+    </a>
+        <a href="#"><article class="articles articles__height_fourth">
+        <img class="games__img" src="./imgs/Game4.svg" alt="rock paper scissors">
+        <p class="articles__number">Игра №4</p>
+        <h2 class="articles__name">Камень, ножницы,<br> бумага</h2>
+    </article>
+    </a>
+        <a href="#"><article class="articles articles__height_fifth">
+        <img class="games__img" src="./imgs/Game5.svg" alt="simple quiz">
+        <p class="articles__number">Игра №5</p>
+        <h2 class="articles__name">Простая викторина</h2>
+    </article>
+    </a>
+        <a href="#"><article class="articles articles__height_sixth">
+        <img class="games__img" src="./imgs/Game6.svg" alt="random color generator">
+        <p class="articles__number">Игра №6</p>
+        <h2 class="articles__name">Генератор<br> случайных<br> цветов</h2>
+    </article>
+    </a>
+    </div>
+</div>
+    </main>
+    <script src="./Script.js"></script>
 </body>
 </html>
