Шрифт изменен, звезды доработаны, центрирование сделано, ширинка картинок поправлена, скролл добавлен

--- a/Index.html
+++ b/Index.html
@@ -9,25 +9,26 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="Style.css">
     <style type="scss">
-      </style>
+    </style>
 </head>
 <body>
     <main class="center">
     <header class="heading">
     <h1 class="header">Добро пожаловать<br> на мой сайт мини-игр</h1>
     <p class="header__text">Тебе предстоит пройти несколько увлекательных игр.<br> Если готов, нажимай <span class="header__text_bold">«Поехали!»</span> и <span class="header__text_bold">приступай.</span></p>
+    <a href="#about" class="header__button_scroll">
     <button class="header__button">Поехали!</button>
+    </a>
     <nav class="navbar">
         <h3 class="navbar__item">викторина</h3>
         <h3 class="navbar__item">угадай число</h3>
         <h3 class="navbar__item">переверни текст</h3>
-        <h3 class="navbar__item_gap">простая а</h3>
+        <h3 class="navbar__item_gap">простая арифмет</h3>
     </nav>
     </header>
-    <div class="about">
+    <div class="about" id="about">
         <h1 class="about__header">Об играх</h1>
         <p class="about__text">В моей коллекции представлено 6 игр на разные темы.<br> Игры несложные — в них может поиграть каждый.<br> Все игры доступны для пользования.</p>
-    
     <div class="games">
     <a href="#"><article class="articles">
         <img class="games__img" src="./imgs/Game1.svg" alt="guess number">
