--- a/Index.html
+++ b/Index.html
@@ -22,11 +22,12 @@
     <nav class="navbar">
         <h3 class="navbar__item">викторина</h3>
         <h3 class="navbar__item">угадай число</h3>
-        <h3 class="navbar__item">переверни текст</h3>
-        <h3 class="navbar__item_gap">простая арифмет</h3>
+        <h3 class="navbar__item navbar__mobile">переверни текст</h3>
+        <h3 class="navbar__item_gap navbar__mobile">простая арифмет</h3>
     </nav>
     </header>
     <div class="about" id="about">
+        <h1 class="about__header_mobile">Мини-игры</h1>
         <h1 class="about__header">Об играх</h1>
         <p class="about__text">В моей коллекции представлено 6 игр на разные темы.<br> Игры несложные — в них может поиграть каждый.<br> Все игры доступны для пользования.</p>
     <div class="games">
@@ -34,39 +35,54 @@
         <img class="games__img" src="./imgs/Game1.svg" alt="guess number">
         <p class="articles__number">Игра №1</p>
         <h2 class="articles__name">Угадай число</h2>
+        <p class="articles__desc">Попробуй угадать случайное<br> число от 1 до 100.</p>
+        <button class="articles__button">Играть!</button>
     </article>
     </a>
     <a href="#"><article class="articles articles__height_second">
         <img class="games__img" src="./imgs/Game2.svg" alt="easy maths">
         <p class="articles__number">Игра №2</p>
         <h2 class="articles__name">Простая<br> арифметика</h2>
+        <p class="articles__desc">Попробуй решить простые арифметические задачи.</p>
+        <button class="articles__button">Играть!</button>
     </article>
     </a>
         <a href="#"><article class="articles articles__height_third">
         <img class="games__img" src="./imgs/Game3.svg" alt="upend text">
         <p class="articles__number">Игра №3</p>
         <h2 class="articles__name">Переверни текст</h2>
+        <p class="articles__desc">Попробуй ввести текст, который будет перевернут.</p>
+        <button class="articles__button">Играть!</button>
     </article>
     </a>
         <a href="#"><article class="articles articles__height_fourth">
         <img class="games__img" src="./imgs/Game4.svg" alt="rock paper scissors">
         <p class="articles__number">Игра №4</p>
         <h2 class="articles__name">Камень, ножницы,<br> бумага</h2>
+        <p class="articles__desc">Отвечай на вопросы викторины<br> с вариантами ответов.</p>
+        <button class="articles__button">Играть!</button>
     </article>
     </a>
         <a href="#"><article class="articles articles__height_fifth">
         <img class="games__img" src="./imgs/Game5.svg" alt="simple quiz">
         <p class="articles__number">Игра №5</p>
         <h2 class="articles__name">Простая викторина</h2>
+        <p class="articles__desc">Сыграй в популярную игру<br> против компьютера.</p>
+        <button class="articles__button">Играть!</button>
     </article>
     </a>
         <a href="#"><article class="articles articles__height_sixth">
         <img class="games__img" src="./imgs/Game6.svg" alt="random color generator">
         <p class="articles__number">Игра №6</p>
         <h2 class="articles__name">Генератор<br> случайных<br> цветов</h2>
+        <p class="articles__desc">Игра, в которой при клике<br> на кнопку фон страницы<br> меняется на случайный.</p>
+        <button class="articles__button">Играть!</button>
     </article>
     </a>
     </div>
+    <footer class="footer">
+        <p class="footer__text">Все права защищены.</p>
+</footer>
 </div>
     </main>
     <script src="./Script.js"></script>
