--- a/Index.html
+++ b/Index.html
@@ -12,13 +12,13 @@
     </style>
 </head>
 <body>
-    <main class="center">
+    <main>
+    <div class="center">
     <header class="heading">
     <h1 class="header">Добро пожаловать<br> на мой сайт мини-игр</h1>
     <p class="header__text">Тебе предстоит пройти несколько увлекательных игр.<br> Если готов, нажимай <span class="header__text_bold">«Поехали!»</span> и <span class="header__text_bold">приступай.</span></p>
-    <a href="#about" class="header__button_scroll">
-    <button class="header__button">Поехали!</button>
-    </a>
+    <p class="header__text_mobile">Тебе предстоит пройти несколько увлекательных игр. Если готов,<br> нажимай <span class="header__text_bold">«Поехали!»</span> и <span class="header__text_bold">приступай.</span></p>
+    <a href="#about" class="header__button header__button_scroll">Поехали!</a>
     <nav class="navbar">
         <h3 class="navbar__item">викторина</h3>
         <h3 class="navbar__item">угадай число</h3>
@@ -26,11 +26,12 @@
         <h3 class="navbar__item_gap navbar__mobile">простая арифмет</h3>
     </nav>
     </header>
-    <div class="about" id="about">
+    </div>
+        <div class="about" id="about">
         <h1 class="about__header_mobile">Мини-игры</h1>
         <h1 class="about__header">Об играх</h1>
         <p class="about__text">В моей коллекции представлено 6 игр на разные темы.<br> Игры несложные — в них может поиграть каждый.<br> Все игры доступны для пользования.</p>
-    <div class="games">
+        <div class="games">
     <a href="#"><article class="articles">
         <img class="games__img" src="./imgs/Game1.svg" alt="guess number">
         <p class="articles__number">Игра №1</p>
@@ -85,6 +86,6 @@
 </footer>
 </div>
     </main>
-    <script src="./Script.js"></script>
+    
 </body>
 </html>
