--- a/Index.html
+++ b/Index.html
@@ -13,12 +13,12 @@
 </head>
 <body>
     <main>
-    <div class="center">
     <header class="heading">
-    <h1 class="header">Добро пожаловать<br> на мой сайт мини-игр</h1>
-    <p class="header__text">Тебе предстоит пройти несколько увлекательных игр.<br> Если готов, нажимай <span class="header__text_bold">«Поехали!»</span> и <span class="header__text_bold">приступай.</span></p>
-    <p class="header__text_mobile">Тебе предстоит пройти несколько увлекательных игр. Если готов,<br> нажимай <span class="header__text_bold">«Поехали!»</span> и <span class="header__text_bold">приступай.</span></p>
+    <h1 class="header center">Добро пожаловать<br> на мой сайт мини-игр</h1>
+    <p class="header__text header__text_mobile center">Тебе предстоит пройти несколько увлекательных игр.<br> Если готов, нажимай <span class="header__text_bold">«Поехали!»</span> и <span class="header__text_bold">приступай.</span></p>
+    <div class="center">
     <a href="#about" class="header__button header__button_scroll">Поехали!</a>
+    </div>
     <nav class="navbar">
         <h3 class="navbar__item">викторина</h3>
         <h3 class="navbar__item">угадай число</h3>
@@ -26,7 +26,6 @@
         <h3 class="navbar__item_gap navbar__mobile">простая арифмет</h3>
     </nav>
     </header>
-    </div>
         <div class="about" id="about">
         <h1 class="about__header_mobile">Мини-игры</h1>
         <h1 class="about__header">Об играх</h1>
@@ -86,6 +85,6 @@
 </footer>
 </div>
     </main>
-    <script src="./Script.js"></script>
+    
 </body>
 </html>
