--- a/Index.html
+++ b/Index.html
@@ -80,11 +80,60 @@
     </article>
     </a>
     </div>
+</div>
+    <div class="mini-games">
+        <h1 class="mini-games__header">Мини-игры</h1>
+    <div class="mini-games__articles">
+        <a href="#"><article class="mini-articles">
+            <h2 class="mini-articles__name">Угадай число</h2>
+            <p class="mini-articles__text">Попробуй угадать случайное<br> число от 1 до 100.</p>
+            <button class="mini-articles__button">Играть!</button>
+            <img class="mini-articles__img" src="./imgs/Game1.svg" alt="guess number">
+        </article>
+        </a>
+        <a href="#"><article class="mini-articles">
+            <img class="mini-articles__img" src="./imgs/Game2.svg" alt="easy maths">
+            <h2 class="mini-articles__name">Простая<br> арифметика</h2>
+            <p class="mini-articles__text">Попробуй решить простые<br> арифметические задачи.</p>
+            <button class="mini-articles__button">Играть!</button>
+        </article>
+        </a>
+        <a href="#"><article class="mini-articles">
+            <h2 class="mini-articles__name">Переверни текст</h2>
+            <p class="mini-articles__text">Попробуй ввести текст, который<br> будет перевернут.</p>
+            <button class="mini-articles__button">Играть!</button>
+            <img class="mini-articles__img" src="./imgs/Game3.svg" alt="upend text">
+        </article>
+        </a>
+        <a href="#"><article class="mini-articles">
+            <img class="mini-articles__img" src="./imgs/Game4.svg" alt="rock paper scissors">
+            <h2 class="mini-articles__name">Камень,<br> ножницы,<br> бумага</h2>
+            <p class="mini-articles__text">Отвечай на вопросы викторины<br> с вариантами ответов.</p>
+            <button class="mini-articles__button">Играть!</button>
+        </article>
+        </a>
+        <a href="#"><article class="mini-articles">
+            <h2 class="mini-articles__name">Викторина</h2>
+            <p class="mini-articles__text">Сыграй в популярную игру<br> против компьютера.</p>
+            <button class="mini-articles__button">Играть!</button>
+            <img class="mini-articles__img" src="./imgs/Game5.svg" alt="simple quiz">
+        </article>
+        </a>
+        <a href="#"><article class="mini-articles">
+            <img class="mini-articles__img" src="./imgs/Game6.svg" alt="random color generator">
+            <h2 class="mini-articles__name">Генератор<br> случайных<br> цветов</h2>
+            <p class="mini-articles__text">Игра, в которой при клике на кнопку<br> фон страницы меняется на случайный.</p>
+            <button class="mini-articles__button">Играть!</button>
+        </article>
+        </a>
+    </div>
+
+    </div>
+
     <footer class="footer">
         <p class="footer__text">Все права защищены.</p>
 </footer>
-</div>
+
     </main>
-    
 </body>
 </html>
