--- a/Index.html
+++ b/Index.html
@@ -53,8 +53,8 @@
         <a class="articles articles__height_third" href="#game3"><img class="games__img" src="./imgs/Game3.svg" alt="upend text">
         <div class="mobile">
         <p class="articles__number">Игра №3</p>
-        <h2 class="articles__name">Переверни текст</h2>
-        <p class="articles__desc">Попробуй ввести текст, который будет<br> перевернут.</p>
+        <h2 class="articles__name">Переверни<br> текст</h2>
+        <p class="articles__desc">Попробуй ввести текст, который<br> будет перевернут.</p>
         <span class="articles__button">Играть!</span></div></a>
     </article>
     
@@ -62,7 +62,7 @@
         <a class="articles articles__height_fourth" href="#game4"><img class="games__img games__img_fourth" src="./imgs/Game4_new.jpg" alt="rock paper scissors">
         <div class="mobile">
         <p class="articles__number">Игра №4</p>
-        <h2 class="articles__name">Камень, ножницы,<br> бумага</h2>
+        <h2 class="articles__name">Камень,<br> ножницы,<br> бумага</h2>
         <p class="articles__desc">Отвечай на вопросы викторины<br> с вариантами ответов.</p>
         <span class="articles__button">Играть!</span></div></a>
     </article>
@@ -71,7 +71,7 @@
         <a class="articles articles__height_fifth" href="#game5"><img class="games__img" src="./imgs/Game5.svg" alt="simple quiz">
         <div class="mobile">
         <p class="articles__number">Игра №5</p>
-        <h2 class="articles__name">Простая викторина</h2>
+        <h2 class="articles__name">Простая<br> викторина</h2>
         <p class="articles__desc">Сыграй в популярную игру<br> против компьютера.</p>
         <span class="articles__button">Играть!</span></div></a>
     </article>
@@ -95,7 +95,7 @@
             <div class="mini-articles">
             <h2 class="mini-articles__name">Угадай число</h2>
             <p class="mini-articles__text">Попробуй угадать случайное<br> число от 1 до 100.</p>
-            <button class="mini-articles__button">Играть!</button>
+            <button class="mini-articles__button" onclick="gameOne();">Играть!</button>
         </div>
         <img class="mini-articles__img" src="./imgs/Game1.svg" alt="guess number">
     </article>
