--- a/Index.html
+++ b/Index.html
@@ -22,7 +22,7 @@
         <h3 class="navbar__item">викторина</h3>
         <h3 class="navbar__item">угадай число</h3>
         <h3 class="navbar__item navbar__mobile">переверни текст</h3>
-        <h3 class="navbar__item_gap navbar__mobile">простая арифмет</h3>
+        <h3 class="navbar__item_gap navbar__mobile">простая а</h3>
     </nav>
     </header>
     <main>
