--- a/Index.html
+++ b/Index.html
@@ -50,7 +50,7 @@
             <a class="articles__mobile" href="#game1"
               ><img
                 class="games__img"
-                src="./imgs/Game1.svg"
+                src="./imgs/Game1.jpeg"
                 alt="guess number"
               />
               <div class="mobile">
@@ -69,7 +69,7 @@
             <a class="articles__mobile" href="#game2"
               ><img
                 class="games__img"
-                src="./imgs/Game2.svg"
+                src="./imgs/Game2.jpeg"
                 alt="easy maths"
               />
               <div class="mobile__second">
@@ -90,7 +90,7 @@
             <a class="articles__mobile articles__height_third" href="#game3"
               ><img
                 class="games__img"
-                src="./imgs/Game3.svg"
+                src="./imgs/Game3.jpeg"
                 alt="upend text"
               />
               <div class="mobile">
@@ -111,7 +111,7 @@
           <article class="articles">
             <a class="articles__mobile articles__height_fourth" href="#game4"
               ><img
-                class="games__img games__img_fourth"
+                class="games__img"
                 src="./imgs/Game4_new.jpg"
                 alt="rock paper scissors"
               />
@@ -135,7 +135,7 @@
             <a class="articles__mobile" href="#game5"
               ><img
                 class="games__img_fifth"
-                src="./imgs/Game5.svg"
+                src="./imgs/Game5.jpeg"
                 alt="simple quiz"
               />
               <div class="mobile">
@@ -157,7 +157,7 @@
             <a class="articles__mobile articles__height_sixth" href="#game6"
               ><img
                 class="games__img"
-                src="./imgs/Game6.svg"
+                src="./imgs/Game6.jpeg"
                 alt="random color generator"
               />
               <div class="mobile">
@@ -194,7 +194,7 @@
             </div>
             <img
               class="mini-articles__img"
-              src="./imgs/Game1.svg"
+              src="./imgs/Game1.jpeg"
               alt="guess number"
             />
           </article>
@@ -202,7 +202,7 @@
           <article class="mini-games__center" id="game2">
             <img
               class="mini-articles__img"
-              src="./imgs/Game2.svg"
+              src="./imgs/Game2.jpeg"
               alt="easy maths"
             />
             <div class="mini-articles">
@@ -229,14 +229,14 @@
             </div>
             <img
               class="mini-articles__img"
-              src="./imgs/Game3.svg"
+              src="./imgs/Game3.jpeg"
               alt="upend text"
             />
           </article>
 
           <article class="mini-games__center" id="game4">
             <img
-              class="mini-articles__img_four"
+              class="mini-articles__img"
               src="./imgs/Game4_new.jpg"
               alt="rock paper scissors"
             />
@@ -265,7 +265,7 @@
             </div>
             <img
               class="mini-articles__img"
-              src="./imgs/Game5.svg"
+              src="./imgs/Game5.jpeg"
               alt="simple quiz"
             />
           </article>
@@ -273,7 +273,7 @@
           <article class="mini-games__center" id="game6">
             <img
               class="mini-articles__img"
-              src="./imgs/Game6.svg"
+              src="./imgs/Game6.jpeg"
               alt="random color generator"
             />
             <div class="mini-articles">
