--- a/Index.html
+++ b/Index.html
@@ -214,7 +214,8 @@
                 Попробуй решить простые<br />
                 арифметические задачи.
               </p>
-              <button class="mini-articles__button">Играть!</button>
+              <button class="mini-articles__button" onclick = "randNums()";>
+              Играть!</button>
             </div>
           </article>
 
